[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snowflake-semantic-tools"
version = "0.2.3"
description = "dbt extension for managing Snowflake Semantic Views and Cortex Analyst semantic models"
readme = "README.md"
authors = ["Matt Luizzi <matthew.luizzi@whoop.com>"]
license = "Apache-2.0"
repository = "https://github.com/WhoopInc/snowflake-semantic-tools"
homepage = "https://github.com/WhoopInc/snowflake-semantic-tools"
keywords = ["snowflake", "dbt", "semantic-layer"]

[tool.poetry.scripts]
# Main CLI entry points
snowflake-semantic-tools = "snowflake_semantic_tools.interfaces.cli.main:cli"
sst = "snowflake_semantic_tools.interfaces.cli.main:cli"  # Short alias for convenience

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.24.0,<1.25.0"
pyyaml = ">=6.0.2,<6.1.0"
ruamel-yaml = ">=0.18.6,<0.19.0"
snowflake-connector-python = {extras = ["pandas", "secure-local-storage"], version = ">=3.12.3,<5.0"}
python-dotenv = ">=1.0.1,<1.1.0"
rich = ">=13.9.4,<14.0"
click = ">=8.1.7,<9.0"
tqdm = ">=4.67.1,<4.68.0"
typing-extensions = ">=4.12.2,<5.0"
packaging = ">=24.2,<25.0"
certifi = ">=2017.4.17,<2025.4.26"
questionary = ">=2.0.0,<3.0"

[tool.poetry.extras]
# Optional extra for dbt Core users: pip install snowflake-semantic-tools[dbt]
# Installs dbt-snowflake (dbt Core with Snowflake adapter)
# Note: dbt Cloud CLI users don't need this extra - install 'dbt' separately
# SST auto-detects both dbt Core and dbt Cloud CLI
dbt = ["dbt-snowflake"]

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-mock = "3.14.0"
pytest-cov = "6.0.0"
mypy = "1.13.0"
isort = "5.13.2"
black = "24.10.0"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.coverage.run]
branch = true
omit = ["test/*"]

[tool.coverage.xml]
output = "test-coverage-results/coverage.xml"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true
exclude = [
]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --color=yes --durations=10 --maxfail=5"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow running tests",
    "snowflake: Tests requiring Snowflake connection",
    "ci: Tests suitable for CI/CD pipeline",
    "smoke: Quick smoke tests for basic functionality",
    "core_models: Tests for core data models and validation",
    "parsing: Tests for YAML parsing and template resolution",
    "cli: Tests for command-line interface",
    "api: Tests for Python API interface",
]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
